fix form stretching

--- a/css/style.css
+++ b/css/style.css
@@ -231,8 +231,6 @@ th {
 }
 
 form {
-	display: flex;
-	flex-wrap: wrap;
 	padding: 0 1rem;
 }
 
@@ -1135,7 +1133,6 @@ footer {
 		width: 100%;
 		margin-right: 0;
 	}
-
 
 }
 
